First step of read me

--- a/Example/applogger-examples/applogger-examples/Settings/Settings.bundle/Root.plist
+++ b/Example/applogger-examples/applogger-examples/Settings/Settings.bundle/Root.plist
@@ -16,7 +16,7 @@
 			<key>AutocorrectionType</key>
 			<string>No</string>
 			<key>DefaultValue</key>
-			<string>https://beaver.applimit.com</string>
+			<string>https://applogger.io</string>
 			<key>IsSecure</key>
 			<false/>
 			<key>Key</key>
