--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,6 +5,7 @@ xcodeproj 'applogger-unittest-app/applogger-unittest-app.xcodeproj'
 target "applogger-examples" do
 	xcodeproj 'applogger-examples/applogger-examples.xcodeproj'
 	platform :ios, '6.0'
+	pod 'AZSocketIO', :git => "git@github.com:dei79/AZSocketIO.git", :branch=> "handshake_data"
 	pod 'apploggerSDK', :path => '../apploggerSDK.podspec'
 	pod 'MBProgressHUD', '>= 0.8'
 	pod 'CocoaLumberjack'
@@ -17,11 +18,13 @@ end
 
 target "applogger-unittest-app" do 
 	xcodeproj 'applogger-unittest-app/applogger-unittest-app.xcodeproj'
+	pod 'AZSocketIO', :git => "git@github.com:dei79/AZSocketIO.git", :branch=> "handshake_data"
 	pod 'apploggerSDK', :path => '../apploggerSDK.podspec'
 end
 
 target "applogger-unittest-appTests" do 
 	xcodeproj 'applogger-unittest-app/applogger-unittest-app.xcodeproj'
+	pod 'AZSocketIO', :git => "git@github.com:dei79/AZSocketIO.git", :branch=> "handshake_data"
 	pod 'apploggerSDK', :path => '../apploggerSDK.podspec'
 end
 
