--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,3 +1,4 @@
+source 'https://github.com/CocoaPods/Specs.git'
 workspace 'applogger-examples.xcworkspace'
 xcodeproj 'applogger-examples/applogger-examples.xcodeproj'
 xcodeproj 'applogger-unittest-app/applogger-unittest-app.xcodeproj'
@@ -5,7 +6,6 @@ xcodeproj 'applogger-unittest-app/applogger-unittest-app.xcodeproj'
 target "applogger-examples" do
 	xcodeproj 'applogger-examples/applogger-examples.xcodeproj'
 	platform :ios, '6.0'
-	pod 'AZSocketIO', :git => "git@github.com:dei79/AZSocketIO.git", :branch=> "handshake_data"
 	pod 'apploggerSDK', :path => '../apploggerSDK.podspec'
 	pod 'MBProgressHUD', '>= 0.8'
 end
@@ -16,13 +16,11 @@ end
 
 target "applogger-unittest-app" do 
 	xcodeproj 'applogger-unittest-app/applogger-unittest-app.xcodeproj'
-	pod 'AZSocketIO', :git => "git@github.com:dei79/AZSocketIO.git", :branch=> "handshake_data"
 	pod 'apploggerSDK', :path => '../apploggerSDK.podspec'
 end
 
 target "applogger-unittest-appTests" do 
 	xcodeproj 'applogger-unittest-app/applogger-unittest-app.xcodeproj'
-	pod 'AZSocketIO', :git => "git@github.com:dei79/AZSocketIO.git", :branch=> "handshake_data"
 	pod 'apploggerSDK', :path => '../apploggerSDK.podspec'
 end
 
